plugins {
    id 'java-library'
    id 'pmd'
    id 'checkstyle'
    id 'com.github.spotbugs'
    id 'com.diffplug.spotless'
}

group = 'dev.luxor-db'
version = project.version

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    // luxor uses MemorySegments which are a preview feature in java 21.
    options.compilerArgs += ['--enable-preview', '-Xlint:preview']
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    maxHeapSize "1024m"
    jvmArgs('--enable-preview', '--enable-native-access=ALL-UNNAMED', '-ea')
}

pmd {
    consoleOutput = true
    toolVersion = "7.0.0"
    threads = 1
    ruleSetFiles = rootProject.files("config/pmd/pmd.xml")
    ruleSets = []
    incrementalAnalysis = true
    pmdTest.enabled = false
}

checkstyle {
    toolVersion "10.13.0"
    checkstyleTest.enabled = false
}

spotbugs {
    spotbugsTest.enabled = false
}

spotbugsMain {
    reports {
        html {
            required = true
            outputLocation = layout.buildDirectory.file("reports/spotbugs.html")
            stylesheet = 'fancy-hist.xsl'
        }
    }
}

spotless {
    java {
        googleJavaFormat()
    }
}

// Workaround for conflicting dependencies
// See https://github.com/checkstyle/checkstyle/issues/14211
configurations.checkstyle {
    resolutionStrategy.capabilitiesResolution.withCapability("com.google.collections:google-collections") {
        select("com.google.guava:guava:23.0")
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'net.jcip:jcip-annotations:1.0'
    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.8.3'

    implementation 'org.slf4j:slf4j-api:2.0.12'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.slf4j:slf4j-simple:2.0.12'
}

test {
    useJUnitPlatform()
}